syntax = "proto3";

package unmango.baremetal.v1alpha1;

service MetaService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Version(VersionRequest) returns (VersionResponse);
}

message PingRequest {}

message PingResponse {
  string message = 1;
}

message VersionRequest {}

message VersionResponse {
  string version = 1;
}
